--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head><meta charset="UTF-8"></head>
 <header><title>This is Hello World</title></header>
 <body>
-    <h1>Hello world?</h1>
+    <h1>Hello world</h1>
     <script src="bundle.js"></script>
 </body>
 </html>
